[gd_scene load_steps=3 format=3 uid="uid://c3mu3ua8h8tsj"]

[ext_resource type="Script" path="res://Stages/MainMenu/settings_menu.gd" id="1_f8d6x"]
[ext_resource type="Theme" uid="uid://cvw8pe8ajmv6h" path="res://Common/menu_theme.tres" id="2_8j17j"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f8d6x")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -76.0
offset_right = 55.0
offset_bottom = 76.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="GlobalVolume" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GlobalLabel" type="Label" parent="VBoxContainer/GlobalVolume"]
layout_mode = 2
theme = ExtResource("2_8j17j")
text = "Global Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/GlobalVolume"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GlobalSlider" type="HSlider" parent="VBoxContainer/GlobalVolume/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 25.0

[node name="GlobalSpinBox" type="SpinBox" parent="VBoxContainer/GlobalVolume/HBoxContainer"]
layout_mode = 2
update_on_text_changed = true

[node name="MusicVolume" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="VBoxContainer/MusicVolume"]
layout_mode = 2
theme = ExtResource("2_8j17j")
text = "Music Volume
"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/MusicVolume/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 25.0

[node name="MusicSpinBox" type="SpinBox" parent="VBoxContainer/MusicVolume/HBoxContainer"]
layout_mode = 2
update_on_text_changed = true

[node name="SFXlVolume" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="SFXLabel" type="Label" parent="VBoxContainer/SFXlVolume"]
layout_mode = 2
theme = ExtResource("2_8j17j")
text = "Sound Effects Volume
"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/SFXlVolume"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="SFXSlider" type="HSlider" parent="VBoxContainer/SFXlVolume/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_horizontal = 3
value = 25.0

[node name="SFXSpinBox" type="SpinBox" parent="VBoxContainer/SFXlVolume/HBoxContainer"]
layout_mode = 2
update_on_text_changed = true

[node name="Back" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_8j17j")
text = "Back"

[connection signal="value_changed" from="VBoxContainer/GlobalVolume/HBoxContainer/GlobalSlider" to="." method="_on_global_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicVolume/HBoxContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXlVolume/HBoxContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_back_pressed"]
